added links for expeditions

--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,11 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General.9736e88d66bb2b61e612.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld.4ced4f8b100300de6f13.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionAntarctica.b7d35904cafede1c1224.png" />
-    <!-- <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheAmazon.6282ae9b37b3048e2f97.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHeartofAfrica.24c3b92adf0b51c84792.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHimalayas.e615682a1b4af639bd7e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionThePyramids.2d219ca8860c67b6b153.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska.fab33b6560ff6845b0a4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch.23240a7dacf250ff23e2.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial.7dde0a91afd92fb693be.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlEasy.c1c731f871fcced74b0c.png" />
@@ -125,24 +125,24 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_22.f0e78ce7b47ff6b93afa.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_23.1ac7eaca2923ef46365b.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_24.3145e620cb6d3a94e294.png" />
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionAntarctica_Front_1.97391b3cfc1b3dfbb326.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionAntarctica_Front_2.d581572049fe5bd37959.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionAntarctica_Front_3.34f2723fb22d33545c20.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheAmazon_Front_1.a91c30b4d7e5291408be.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheAmazon_Front_2.39ea5b6a0b0c19bfa18e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheAmazon_Front_3.20bd7baed3f5f6744a3a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHeartofAfrica_Front_1.3448ba449aa7b78885a3.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHeartofAfrica_Front_2.1f1b380b1025e9f4ebc8.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHeartofAfrica_Front_3.de7836cc7af2f8c58840.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHimalayas_Front_1.86d73952b4408e2ba4e4.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHimalayas_Front_2.b6d5536108514d3fccd5.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHimalayas_Front_3.00fc265436292a4f565f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionThePyramids_Front_1.71de085d6d72203ad0a0.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionThePyramids_Front_2.f2dbcfa65e6a5749f3a0.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionThePyramids_Front_3.bac824b2116e39cf6c09.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska_Front_1.8390f3191c6d213bb492.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska_Front_2.d41d5c218d0bb47c9f33.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska_Front_3.3227d5f20383f52a1353.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_1.29efe200e8bcb0155128.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_2.8ec90f77d38b66ec9a9f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_3.7d503aeaa19d3f4dcd76.png" />
