added links to Cthulhu Mysteries

--- a/public/index.html
+++ b/public/index.html
@@ -38,21 +38,25 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CharIcon.2f3e8434d7c730e1d398.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_board.0607afda106f917e8ab4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_front.9df6305e5eb2ed9e18ab.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_mystery.4d93e58650b0e600b755.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_mystery.d11e11eebcf41f308bdb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_Card.61fd1e5e2846951c3b88.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas.d0f2f3e154ee48e904d3.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe.867b298c359a78ff6e40.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia.3b52b68a4c91dc4b80f8.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General.9736e88d66bb2b61e612.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld.4ced4f8b100300de6f13.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionAntarctica.b7d35904cafede1c1224.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheAmazon.6282ae9b37b3048e2f97.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHeartofAfrica.24c3b92adf0b51c84792.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHimalayas.e615682a1b4af639bd7e.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionThePyramids.2d219ca8860c67b6b153.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska.fab33b6560ff6845b0a4.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch.23240a7dacf250ff23e2.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial.7dde0a91afd92fb693be.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionAntarctica.f13233563ff6fb105e80.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheAmazon.221072ce53ba497952ca.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHeartofAfrica.69304bda4ddb03e58d1c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTheHimalayas.87947116f6123b41ba3f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionThePyramids.895f8be55827f6eeef3c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska.839cc2784b85cec1145d.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch.7c4f92b780d7c6bf4c89.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial.5bde04014867f8129e3f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_1.ee1a45df52bb922ab015.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_2.db24d680760ed6831372.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_3.1dcf08f6757d82a558ec.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_4.65471c0315e9836a13c4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlEasy.c1c731f871fcced74b0c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlNormal.39fab74a064bd59dd774.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlHard.0209a94174bb733daa69.png" />
@@ -64,6 +68,14 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char6.0829ffe877057bcf5b5c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char7.7658b72a0b84f81a2e34.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char8.420f8aaa003bb10ae804.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClue.3c2c09ebba1a5681f656.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritch.0a81fd93b1e51e6b947c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenKilling.a39d16b75ff1c5861163.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMinus.296a3ed2e38434e6ed2f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenPlus.af35ee150ad428369a38.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthylla.2d124ad2e78fb0f9423e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.ca4bb8953967499af51a.png" />
+    <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_back.d4690e670f166e9c4603.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
@@ -157,6 +169,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_4.bd886f963371d26976da.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_5.bf3b461040f81e9eb394.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_6.f29a938f42ce5914b37a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_Horror_Cover.d46fb989b30ff40878ca.png" />
     <!-- <link rel="preload" as="image" href="" /> -->
   </head>
   <body>
