Added link for NG8

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG5.6ca7c4e01af4f1a061ba.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG6.739dede4964178211d6b.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG7.47405796e562e3c45f55.png" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG8.15ec234b76052974c209.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG1.435e6c4be5ac3dbaf48a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
