Loading page check

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      .loader {
+      background-image: url(../pictures/Main/Eldritch_Horror_Cover.png);
+      background-size: cover;
+      }
+    </style>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -183,6 +189,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="loader"></div>
+    <div id="root">
+      <div class="loader"></div>
+    </div>
   </body>
 </html>
