Loading page check

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
+    <!-- <style>
       .loader {
-      background-image: url(../pictures/Main/Eldritch_Horror_Cover.png);
-      background-size: cover;
+        background-image: url(../pictures/Main/Eldritch_Horror_Cover.png);
+        background-size: cover;
       }
-    </style>
+    </style> -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -190,7 +190,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <div class="loader"></div>
+      <div class="loader">
+        <img src="/src/pictures/Main/CthuluGif.gif"> 
+      </div>
     </div>
   </body>
 </html>
