Loading page check

--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class="loader">
-        <img src="/src/pictures/Main/CthuluGif.gif"> 
+        <!-- <img src="/src/pictures/Main/CthuluGif.gif">  -->
       </div>
     </div>
   </body>
