--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script>
     <title>Eldritch Horror</title>
-    <!-- <link rel="preload" as="image" href="https://i.imgur.com/giHQnBp.gif" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth.c87edfd070508b6627ae.jpg" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth.50cad0e7c4746875b237.jpg" />
@@ -184,9 +184,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
+    <div id="rot">
       <div class="loader">
-        <!-- <img src="/src/pictures/Main/CthuluGif.gif">  -->
+          <h1 class="loadingText">ŁADOWANIE...</h1>
       </div>
     </div>
   </body>
