working loading page

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
+    <link rel="preload" type="text/css" href="/src/Eldritch-font/Birmingham.otf">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"></link>
@@ -184,7 +185,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="rot">
+    <div id="root">
       <div class="loader">
           <h1 class="loadingText">ŁADOWANIE...</h1>
       </div>
