Working loading page

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script>
     <title>Eldritch Horror</title>
+    <link rel="preload" as="font" href="https://eldritch-horror.onrender.com/static/media/Birmingham.afd924971eab16454fbe.otf">
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth.c87edfd070508b6627ae.jpg" />
