Font preload check

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
+    <link rel="stylesheet" type="text/css" href="https://eldritch-horror.onrender.com/static/media/Birmingham.afd924971eab16454fbe.otf">
     <link rel="preload" as="fonts" href="https://eldritch-horror.onrender.com/static/media/Birmingham.afd924971eab16454fbe.otf">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
