Mozilla preload not working

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="modulepreload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,9 +28,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script> -->
     <title>Eldritch Horror</title>
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth.c87edfd070508b6627ae.jpg" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth.50cad0e7c4746875b237.jpg" />
