Mozilla preload check

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="modulepreload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
