Mozilla not loading preload

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,26 @@
     <!-- <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script> -->
     <title>Eldritch Horror</title>
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png" />
+    <style>
+      .loader {
+        height: 100vh;
+        width: 100vw;
+        background-image: url("https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png");
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        text-align: center;
+      }
+        
+      .loadingText {
+            padding-top: 60vh;
+            margin-top: 0;
+            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-size: 10vh;
+            color: rgb(0, 0, 0);
+      }
+
+    </style>  
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth.c87edfd070508b6627ae.jpg" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth.50cad0e7c4746875b237.jpg" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Shub-Niggurath.c9876d01702e0a06cb6a.jpg" />
