--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" />
+    <style>
+      .loader {
+        height: 100vh;
+        width: 100vw;
+        background-image: url("https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif");
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        text-align: center;
+      }
+
+      .loadingText {
+        padding-top: 60vh;
+        margin-top: 0;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: 10vh;
+        color: rgb(0, 0, 0);
+      }
+    </style>
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,26 +50,6 @@
     <!-- <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script> -->
     <title>Eldritch Horror</title>
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png" />
-    <style>
-      .loader {
-        height: 100vh;
-        width: 100vw;
-        background-image: url("https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png");
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
-        text-align: center;
-      }
-        
-      .loadingText {
-            padding-top: 60vh;
-            margin-top: 0;
-            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            font-size: 10vh;
-            color: rgb(0, 0, 0);
-      }
-
-    </style>  
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth.c87edfd070508b6627ae.jpg" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth.50cad0e7c4746875b237.jpg" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Shub-Niggurath.c9876d01702e0a06cb6a.jpg" />
@@ -204,7 +203,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="rot">
+    <div id="root">
       <div class="loader">
           <h1 class="loadingText">ŁADOWANIE...</h1>
       </div>
