--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="rot">
+    <div id="root">
       <div class="loader">
           <h1 class="loadingText">ŁADOWANIE...</h1>
       </div>
