Up to date with link for images

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="AllPages.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -59,7 +58,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CharIcon.2f3e8434d7c730e1d398.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_board.0607afda106f917e8ab4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_front.9df6305e5eb2ed9e18ab.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_mystery.d11e11eebcf41f308bdb.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery.d11e11eebcf41f308bdb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_Card.61fd1e5e2846951c3b88.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas.d0f2f3e154ee48e904d3.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe.867b298c359a78ff6e40.png" />
@@ -89,14 +88,18 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char6.0829ffe877057bcf5b5c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char7.7658b72a0b84f81a2e34.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char8.420f8aaa003bb10ae804.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_back.d4690e670f166e9c4603.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenBackWhite.276448a425fab662baa1.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSurrender.6517e9c9010ce08c1f24.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClue.3c2c09ebba1a5681f656.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritch.0a81fd93b1e51e6b947c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenKilling.a39d16b75ff1c5861163.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMinus.296a3ed2e38434e6ed2f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenPlus.af35ee150ad428369a38.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthylla.2d124ad2e78fb0f9423e.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.ca4bb8953967499af51a.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_back.d4690e670f166e9c4603.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.a6bb886c42d1f698f0a7.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhu.0ecd43072009387d951a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhuSlayed.5d3f0055be1926510f2b.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG1.0ef45ce08c369379af57.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG2.1289d13c9eeed82d540d.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG3.c6ad09b9b54e304a741a.png" />
@@ -199,7 +202,8 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_5.bf3b461040f81e9eb394.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_6.f29a938f42ce5914b37a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_Horror_Cover.d46fb989b30ff40878ca.png" />
-    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Defeat_Cover.6d16577d75244edb750e.jpg" />
+    <link rel="preload" as="image" href="" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
