Checking on Loading

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       .loader {
         height: 100vh;
         width: 100vw;
-        background-image: url("https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif");
+        background-image: url(/src/pictures/Main/CthuluGif.gif);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
