--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" />
+    <!-- <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CthuluGif.93e67e150c09f92d6f28.gif" /> -->
     <style>
       .loader {
         height: 100vh;
         width: 100vw;
-        background-image: url(/src/pictures/Main/CthuluGif.gif);
+        background-image: url("https://steamuserimages-a.akamaihd.net/ugc/448458366682216893/B370CD86E0E0FDF7B43761C4907408F46FA7DD50/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false");
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
