First good concept of Mythos Reckoning

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
       }
     </style>
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
+    <link href="https://db.onlinewebfonts.com/c/b518f5347378afc8fe07d3d01a487487?family=F1669+Elzevir+W00+Normal" rel="stylesheet"> 
+    <link href="https://db.onlinewebfonts.com/c/9c96cf75cb04305b353bbb4d876283e5?family=Romana" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"></link>
