--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,11 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenBackWhite.276448a425fab662baa1.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSurrender.6517e9c9010ce08c1f24.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClue.3c2c09ebba1a5681f656.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClueFaded.fa8e122e414f2c0a7da1.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritch.0a81fd93b1e51e6b947c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritchFaded.8eb8f59da4cea6442eaa.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenFlip.e4bd593cf6472d06509c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSanity.6122752e858cc4ca3d70.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenKilling.a39d16b75ff1c5861163.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMinus.296a3ed2e38434e6ed2f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenPlus.af35ee150ad428369a38.png" />
@@ -102,6 +106,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.a6bb886c42d1f698f0a7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhu.0ecd43072009387d951a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhuSlayed.5d3f0055be1926510f2b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattBlue.4e0a74435e013480bbe7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG1.0ef45ce08c369379af57.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG2.1289d13c9eeed82d540d.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG3.c6ad09b9b54e304a741a.png" />
@@ -111,6 +116,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG7.47405796e562e3c45f55.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG8.15ec234b76052974c209.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG1.435e6c4be5ac3dbaf48a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB1.d0896d0e18e6a73ed503.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.c60616715d5bcd5b331f.png" />
