Fixed error button in button

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_6.f29a938f42ce5914b37a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_Horror_Cover.d46fb989b30ff40878ca.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Defeat_Cover.6d16577d75244edb750e.jpg" />
-    <link rel="preload" as="image" href="" />
+    <!-- <link rel="preload" as="image" href="" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
