--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,8 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritchFaded.8eb8f59da4cea6442eaa.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenFlip.e4bd593cf6472d06509c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSanity.6122752e858cc4ca3d70.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenGate.0e592c151182bbe06cd1.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenDoom.d403d323fcbf0ad9d5d9.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenKilling.a39d16b75ff1c5861163.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMinus.296a3ed2e38434e6ed2f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenPlus.af35ee150ad428369a38.png" />
@@ -117,6 +119,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG8.15ec234b76052974c209.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG1.435e6c4be5ac3dbaf48a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB1.d0896d0e18e6a73ed503.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB2.c6fa9f235293e3044817.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.c60616715d5bcd5b331f.png" />
