--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSurrender.6517e9c9010ce08c1f24.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClue.3c2c09ebba1a5681f656.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClueFaded.fa8e122e414f2c0a7da1.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenClueCrossedOut.14ed79574c178f07ac1a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritch.0a81fd93b1e51e6b947c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenEldritchFaded.8eb8f59da4cea6442eaa.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenFlip.e4bd593cf6472d06509c.png" />
@@ -108,6 +109,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.a6bb886c42d1f698f0a7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhu.0ecd43072009387d951a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhuSlayed.5d3f0055be1926510f2b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTickTockMenSlayed.4faa3824f3e4ddc2613e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/MythosMattBlue.4e0a74435e013480bbe7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG1.0ef45ce08c369379af57.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NG2.1289d13c9eeed82d540d.png" />
@@ -120,6 +122,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HG1.435e6c4be5ac3dbaf48a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB1.d0896d0e18e6a73ed503.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB2.c6fa9f235293e3044817.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_EB4.09a4651269c849e849fd.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.c60616715d5bcd5b331f.png" />
