Added mythos EB4

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenKilling.a39d16b75ff1c5861163.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMinus.296a3ed2e38434e6ed2f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenPlus.af35ee150ad428369a38.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenDelayedInvestigator.cb5473d1363309baa768.png" />
+    <link rel="preload" as="image" href="" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthylla.2d124ad2e78fb0f9423e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.a6bb886c42d1f698f0a7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhu.0ecd43072009387d951a.png" />
