Added mythos NB4 and HB1

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,20 @@
       .loadingText {
         padding-top: 60vh;
         margin-top: 0;
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin-bottom: 0;
+        font-family: "Romana";  
         font-size: 10vh;
         color: rgb(0, 0, 0);
       }
+
+      .loadingTextIcons {
+        margin-top: 1.3vh;
+        font-family: EldritchIcons; 
+        font-size: 23vh;
+        font-weight: 200;
+        color: rgb(0, 0, 0);
+      }
+
     </style>
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
     <link href="https://db.onlinewebfonts.com/c/b518f5347378afc8fe07d3d01a487487?family=F1669+Elzevir+W00+Normal" rel="stylesheet"> 
@@ -105,7 +115,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenKilling.a39d16b75ff1c5861163.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMinus.296a3ed2e38434e6ed2f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenPlus.af35ee150ad428369a38.png" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenDelayedInvestigator.984a708bbe7ef6a11e13.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthylla.2d124ad2e78fb0f9423e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.a6bb886c42d1f698f0a7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhu.0ecd43072009387d951a.png" />
@@ -230,6 +240,8 @@
     <div id="root">
       <div class="loader">
           <h1 class="loadingText">ŁADOWANIE...</h1>
+          <h2 class="loadingTextIcons">p</h2>
+          
       </div>
     </div>
   </body>
