Added mythos NB4 and HB1

--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,8 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB1.5e089a2cb1e88a8665af.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB2.1cd89bacd82e63170a83.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB3.6b0391a70e0b151e6a15.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_NB4.80a19a8d7ec857460374.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_HB1.345d88ab09d7dab4198e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMonsterToughness.be518e8440f70c2e9a94.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
